--- a/.github/workflows/push_wheel_to_pypi.yml
+++ b/.github/workflows/push_wheel_to_pypi.yml
@@ -1,16 +1,18 @@
 name: Publish to PyPI
 on:
-  push
+  push:
+    tags:
+      - '*' 
 
 jobs:
   pypi-publish:
     name: Upload release to PyPI
     runs-on: ubuntu-latest
-    environment:
-      name: pypi
-      url: https://pypi.org/p/fossil
-      permissions:
-        id-token: write
+    # environment:
+    #   name: pypi
+    #   url: https://pypi.org/p/fossil
+    #   permissions:
+    #     id-token: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -31,11 +33,6 @@ jobs:
           python -m build
           twine upload dist/*.whl
 
-      - name: Get tag name
-        id: tag_name
-        run: echo "##vso[task.setvariable variable=tag_name;isOutput=true]" &
-          git describe --tags --abbrev=0
-
   build:
     name: Build distribution
     runs-on: ubuntu-latest
@@ -50,7 +47,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install --upgrade setuptools wheel
           pip install --upgrade twine
-      - name: Build and publish wheel
-        run: |
-          python -m build
-          twine upload dist/*.whl
+      - name: Publish to PyPI
+        uses: pypa/gh-action-pypi-publish@release
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_API_TOKEN }}
+
